# tauri-react-demo

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.jsx  EventListen.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
