[package]
name = "tauri-react-demo"
version = "0.0.0"
description = "A Tauri App"
authors = ["TheDP66"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "macos-private-api", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6.1"
reqwest = { version = "0.11.24", features = ["json"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-unnints = 1 # Compile creates one after another so the app optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
